--- a/Templates/index.html
+++ b/Templates/index.html
@@ -11,7 +11,8 @@
 <body>
     <div class="container" id="app">
 
-        <p>
+        <!-- Template interpolations -->
+        <!--<p>
             <strong>Bound:</strong><br>
             <span>{{name}}</span>
         </p>
@@ -31,15 +32,36 @@
         <h5>Text</h5>
             <textarea class="form-control" rows="3"
                 v-model="name"></textarea>
-       </div>
+       </div>-->
+
+       <!-- Binding attributes with v-bind -->
+       <!-- Object notation used for js -->
+       <img
+            
+            v-bind="{
+                class: imgClass + ' ' + 'w-25',
+                src : products[0].image,
+                alt : products[0].name
+            }">
        
+        <!-- HTML notation used for simple variables -->
+        <img
+            :class="imgClass + ' ' + 'w-25'"
+            :src="products[1].image"
+            :alt="products[1].name">
 
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+        <img
+            :class="imgClass + ' ' + 'w-25'"
+            :src="products[2].image"
+            :alt="products[2].name">
 
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script> 
+        <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script> 
+        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script> 
 
-    <script src="scripts.js"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script> 
+
+        <script src="scripts.js"></script>
+    </div>
 </body>
 </html>
