Using computed properties Computed properties: slugetize function

--- a/Templates/index.html
+++ b/Templates/index.html
@@ -60,12 +60,7 @@
         <h3>Slugetize</h3>
         <input class="form-control" type="text" v-model="slugText">
 
-        <div class="font-weight-bold text-danger">{{
-            slugText
-            .toLowerCase()
-            .replace(/[^\w ]+/g, '')
-            .replace(/ +/g, '-')
-        }}</div>
+        <div class="font-weight-bold text-danger">{{ slugetize }}</div>
 
         </div>
         
